# treewidth

./: .gitignore  .travis.yml  Bag.h  CE.h  CMakeLists.txt  DegreeFillInPermutationStrategy.h  DegreePermutationStrategy.h  Delta2D.h  FillInPermutationStrategy.h  Graph.h  LBN.h  LBNPlus.h  LICENSE  LowerBound.h  LowerBoundMMD.h  MCSPermutationStrategy.h  Makefile  MetaLowerBoundHeuristic.h  PermutationStrategy.h  README.md  TreeDecomposition.h  common.h  main.cpp
.github/workflows/: ci-linux.yml  ci-macos.yml  ci.yml
include/treewidth/: Bag.h  CE.h  DegreeFillInPermutationStrategy.h  DegreePermutationStrategy.h  Delta2D.h  FillInPermutationStrategy.h  Graph.h  LBN.h  LBNPlus.h  LowerBound.h  LowerBoundMMD.h  MCSPermutationStrategy.h  MetaLowerBoundHeuristic.h  PermutationStrategy.h  TreeDecomposition.h
tests/: CMakeLists.txt  catch_main.cpp  decomposition_check.h  graph_builders.h  test_graph.cpp  test_lower.cpp  test_serialization.cpp  test_upper.cpp
